--- a/server/.env.example
+++ b/server/.env.example
@@ -1,7 +1,8 @@
 PORT=9999
 # mysql 配置
 MYSQL_DATABASE = 'vane'
-MYSQL_ALERT = 'true'
+# 这将检查数据库中表的当前状态(它具有哪些列,它们的数据类型等),然后在表中进行必要的更改以使其与模型匹配. 正式环境 请设置为 'false'
+MYSQL_ALERT = 'false'
 # 支持多个数据库 以空格分隔 请确保个数一致 第一个为主库 其余为从库
 MYSQL_HOST =     'vane-mysql-master vane-mysql-node1 vane-mysql-node2'
 MYSQL_PORT =     '3307              3308             3309'
