--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -13,15 +13,16 @@
     "allowJs": true,
     "baseUrl": "./",
     "paths": {
-      "@/*": ["./src/*"],
-      "@root/*": ["../*"],
+      "@/*": ["src/*"]
     },
-    "types": ["vite/client","element-plus/global","./global"],
     "allowSyntheticDefaultImports": true, // 默认导入
     "skipLibCheck": true, // 不对第三方依赖类型检查 ，element-plus 生产打包报错
-    "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */
+    "types": [
+      "element-plus/global",
+      "./src/global.d.ts",
+      "./src/components.d.ts"
+    ]
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "global.d.ts", "components.d.ts"],
-  "exclude": ["node_modules", "dist", "**/*.js"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
