fix: 🐛 web端打包问题

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -19,8 +19,8 @@
     "skipLibCheck": true, // 不对第三方依赖类型检查 ，element-plus 生产打包报错
     "types": [
       "element-plus/global",
-      "./src/global.d.ts",
-      "./src/components.d.ts"
+      "./src/global",
+      "./src/components"
     ]
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
