--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
         "dayjs": "^1.11.7",
         "dotenv": "^16.0.3",
         "eslint-plugin-prettier": "^4.2.1",
+        "exceljs": "^4.3.0",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
         "file-stream-rotator": "^1.0.0",
@@ -52,7 +53,8 @@
         "sequelize": "^6.31.0",
         "svg-captcha": "^1.4.0",
         "ts-node": "^10.9.1",
-        "uuid": "^9.0.0"
+        "uuid": "^9.0.0",
+        "xlsx-writestream": "^0.5.1"
     },
     "devDependencies": {
         "@types/express": "4.17.17",
