--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -19,8 +19,7 @@
     "skipLibCheck": true, // 不对第三方依赖类型检查 ，element-plus 生产打包报错
     "types": [
       "element-plus/global",
-      "./src/global",
-      "./src/components"
+      "./src/global"
     ]
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
